# logzig

./: CMakeLists.txt  build.zig  dev.sh
src/: main.cpp
src/game/: export.cpp  export.h  export.zig  game.cpp  game.h  game.zig  gate.zig  global.h  libgame.exports
src/main/: main.zig
